--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ctp.bakeit">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,6 +18,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <provider
+            android:name=".provider.BakeItProvider"
+            android:authorities="com.ctp.bakeit"
+            android:exported="false" />
+
+        <activity android:name=".RecipeDetailsActivity" />
+        <activity android:name=".StepDetailActivity"></activity>
     </application>
 
 </manifest>
