--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,11 +32,28 @@
                 android:value=".MainActivity" />
         </activity>
         <activity android:name=".StepDetailActivity"
-            android:parentActivityName=".RecipeDetailsActivity">
+            android:parentActivityName=".RecipeDetailsActivity"
+            android:launchMode="singleTop"
+            >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".RecipeDetailsActivity" />
+
         </activity>
+        <receiver android:name=".fragments.StepDetailFragment$MediaReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.MEDIA_BUTTON" />
+            </intent-filter>
+        </receiver>
+
+        <service android:name=".sync.BakeItSyncIntentService"
+            android:exported="false"/>
+
+        <service android:name=".sync.BakeItFirebaseJobService">
+            <intent-filter >
+                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE"/>
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
