--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -22,38 +24,56 @@
         <provider
             android:name=".provider.BakeItProvider"
             android:authorities="com.ctp.bakeit"
-            android:exported="false" />
+            android:exported="true" />
 
-        <activity android:name=".RecipeDetailsActivity"
-            android:parentActivityName=".MainActivity"
-            android:launchMode="singleTop">
+        <activity
+            android:name=".RecipeDetailsActivity"
+            android:launchMode="singleTop"
+            android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
-        <activity android:name=".StepDetailActivity"
-            android:parentActivityName=".RecipeDetailsActivity"
+        <activity
+            android:name=".StepDetailActivity"
             android:launchMode="singleTop"
-            >
+            android:parentActivityName=".RecipeDetailsActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".RecipeDetailsActivity" />
-
         </activity>
+
         <receiver android:name=".fragments.StepDetailFragment$MediaReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.MEDIA_BUTTON" />
             </intent-filter>
         </receiver>
 
-        <service android:name=".sync.BakeItSyncIntentService"
-            android:exported="false"/>
-
+        <service
+            android:name=".sync.BakeItSyncIntentService"
+            android:exported="false" />
         <service android:name=".sync.BakeItFirebaseJobService">
-            <intent-filter >
-                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE"/>
+            <intent-filter>
+                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE" />
             </intent-filter>
         </service>
+
+        <receiver android:name=".widget.IngredientListWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/new_app_widget_info" />
+        </receiver>
+
+        <service android:name=".widget.IngredientWidgetService"
+            android:exported="false"/>
+
+        <service android:name=".widget.ListWidgetService"
+            android:permission="android.permission.BIND_REMOTEVIEWS"/>
+
     </application>
 
 </manifest>
