Configured automatic signing

--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,35 @@
 /.idea/workspace.xml
 /.idea/libraries
 /.idea/misc.xml
-.DS_Store
-/build
 /captures
 .externalNativeBuild
 /gradle.properties
-/keystore.properties
+
+# Built application files
+*.apk
+*.ap_
+
+# Files for the ART/Dalvik VM
+*.dex
+
+# Java class files
+*.class
+
+# Android Studio
+captures/
+
+*.iml
+.idea/
+
+# Gradle cache
+.gradle
+build/
+
+# Local configuration file
+local.properties
+
+# System files
+.DS_Store
+
 keystore.properties
 
